--- a/documentation/documents/identity/sequential/index.html
+++ b/documentation/documents/identity/sequential/index.html
@@ -93,15 +93,15 @@
 			      		<!--Title: Sequential Identifiers with Hilo-->
 <p>The <em>Hilo</em> sequence generation can be customized with either global defaults or document type specific overrides. By default, the Hilo sequence generation in Marten increments by 1 and uses a &quot;maximum lo&quot; number of 1000.</p>
 <p>To set different global defaults, use the <code>StoreOptions.HiloSequenceDefaults</code> property like this sample:</p>
-<pre><code class="language-csharp">&#xA;var store = DocumentStore.For(_ =&gt;&#xA;{&#xA;    _.HiloSequenceDefaults.MaxLo = 55;&#xA;    _.Connection(ConnectionSource.ConnectionString);&#xA;});&#xA;</code></pre>
+<pre><code class="language-csharp">&#xD;&#xA;var store = DocumentStore.For(_ =&gt;&#xD;&#xA;{&#xD;&#xA;    _.HiloSequenceDefaults.MaxLo = 55;&#xD;&#xA;    _.Connection(ConnectionSource.ConnectionString);&#xD;&#xA;});&#xD;&#xA;</code></pre>
 <p>To override the Hilo configuration for a specific document type, you can decorate the document type with the <code>[HiloSequence]</code> attribute
 as in this example:</p>
-<pre><code class="language-csharp">&#xA;[HiloSequence(MaxLo = 33)]&#xA;public class OverriddenHiloDoc&#xA;{&#xA;    public int Id { get; set; }&#xA;}&#xA;</code></pre>
+<pre><code class="language-csharp">&#xD;&#xA;[HiloSequence(MaxLo = 33)]&#xD;&#xA;public class OverriddenHiloDoc&#xD;&#xA;{&#xD;&#xA;    public int Id { get; set; }&#xD;&#xA;}&#xD;&#xA;</code></pre>
 <p>You can also use the <code>MartenRegistry</code> fluent interface to override the Hilo configuration for a document type as in this example:</p>
-<pre><code class="language-csharp">&#xA;var store = DocumentStore.For(_ =&gt;&#xA;{&#xA;    // Overriding the Hilo settings for the document type &quot;IntDoc&quot;&#xA;    _.Schema.For&lt;IntDoc&gt;()&#xA;        .HiloSettings(new HiloSettings {MaxLo = 66});&#xA;&#xA;    _.Connection(ConnectionSource.ConnectionString);&#xA;});&#xA;</code></pre>
+<pre><code class="language-csharp">&#xD;&#xA;var store = DocumentStore.For(_ =&gt;&#xD;&#xA;{&#xD;&#xA;    // Overriding the Hilo settings for the document type &quot;IntDoc&quot;&#xD;&#xA;    _.Schema.For&lt;IntDoc&gt;()&#xD;&#xA;        .HiloSettings(new HiloSettings {MaxLo = 66});&#xD;&#xA;&#xD;&#xA;    _.Connection(ConnectionSource.ConnectionString);&#xD;&#xA;});&#xD;&#xA;</code></pre>
 <h2 id="set-the-identifier-floor">Set the Identifier Floor</h2>
 <p>Marten 1.2 adds a convenience method to reset the &quot;floor&quot; of the Hilo sequence for a single document type:</p>
-<pre><code class="language-csharp">&#xA;var store = DocumentStore.For(ConnectionSource.ConnectionString);&#xA;&#xA;// Resets the minimum Id number for the IntDoc document&#xA;// type to 2500&#xA;store.Tenancy.Default.ResetHiloSequenceFloor&lt;IntDoc&gt;(2500);&#xA;</code></pre>
+<pre><code class="language-csharp">&#xD;&#xA;var store = DocumentStore.For(ConnectionSource.ConnectionString);&#xD;&#xA;&#xD;&#xA;// Resets the minimum Id number for the IntDoc document&#xD;&#xA;// type to 2500&#xD;&#xA;store.Tenancy.Default.ResetHiloSequenceFloor&lt;IntDoc&gt;(2500);&#xD;&#xA;</code></pre>
 <p>This functionality was added specifically to aid in importing data from an existing data source. Do note that this functionality simply guarantees
 that all new id's assigned for the document type will be higher than the new floor. It is perfectly possible and even likely that there will be some
 gaps in the id sequence.</p>
