--- a/documentation/events/schema/index.html
+++ b/documentation/events/schema/index.html
@@ -94,7 +94,7 @@
 <h2 id="overriding-the-schema">Overriding the Schema</h2>
 <p>By default, the event store database objects are created in the default schema for the active <code>IDocumentStore</code>. If you wish,
 you can segregate the event store objects into a separate schema with this syntax:</p>
-<pre><code class="language-csharp">&#xA;var store = DocumentStore.For(_ =&gt;&#xA;{&#xA;    _.Connection(&quot;some connection string&quot;);&#xA;&#xA;    // Places all the Event Store schema objects&#xA;    // into the &quot;events&quot; schema&#xA;    _.Events.DatabaseSchemaName = &quot;events&quot;;&#xA;});&#xA;</code></pre>
+<pre><code class="language-csharp">&#xD;&#xA;var store = DocumentStore.For(_ =&gt;&#xD;&#xA;{&#xD;&#xA;    _.Connection(&quot;some connection string&quot;);&#xD;&#xA;&#xD;&#xA;    // Places all the Event Store schema objects&#xD;&#xA;    // into the &quot;events&quot; schema&#xD;&#xA;    _.Events.DatabaseSchemaName = &quot;events&quot;;&#xD;&#xA;});&#xD;&#xA;</code></pre>
 <h2 id="database-tables">Database Tables</h2>
 <p>The events are stored in the <code>mt_events</code> table, with these columns:</p>
 <ul>
@@ -122,7 +122,7 @@ column exists so that Marten can be effectively used without the underlying JSON
 </ul>
 <h2 id="event-metadata-in-code">Event Metadata in Code</h2>
 <p>Hopefully, it's relatively clear how the fields in <code>mt_events</code> map to the <code>IEvent</code> interface in Marten:</p>
-<pre><code class="language-csharp">&#xA;public Guid StreamId { get; set; }&#xA;&#xA;public string StreamKey { get; set; }&#xA;&#xA;public Guid Id { get; set; }&#xA;&#xA;public int Version { get; set; }&#xA;&#xA;public long Sequence { get; set; }&#xA;&#xA;public T Data { get; set; }&#xA;&#xA;public DateTimeOffset Timestamp { get; set; }&#xA;&#xA;public string TenantId { get; set; }&#xA;</code></pre>
+<pre><code class="language-csharp">&#xD;&#xA;public Guid StreamId { get; set; }&#xD;&#xA;&#xD;&#xA;public string StreamKey { get; set; }&#xD;&#xA;&#xD;&#xA;public Guid Id { get; set; }&#xD;&#xA;&#xD;&#xA;public int Version { get; set; }&#xD;&#xA;&#xD;&#xA;public long Sequence { get; set; }&#xD;&#xA;&#xD;&#xA;public T Data { get; set; }&#xD;&#xA;&#xD;&#xA;public DateTimeOffset Timestamp { get; set; }&#xD;&#xA;&#xD;&#xA;public string TenantId { get; set; }&#xD;&#xA;</code></pre>
 <p>The full event data is available on <code>EventStream</code> and <code>IEvent</code> objects immediately after committing a transaction that involves event capture. See <a href="/marten/documentation/documents/diagnostics">Diagnostics and Instrumentation</a> for more information on capturing event data in the instrumentation hooks.</p>
 
 			      	</div>
