--- a/documentation/schema/schema/index.html
+++ b/documentation/schema/schema/index.html
@@ -93,7 +93,7 @@
 			      		<!--Title:Configuring the Database Schema-->
 <p>By default, Marten will put all database schema objects into the main <em>public</em> schema. If you want to override this behavior,
 use the <code>StoreOptions.DocumentSchemaName</code> property when configuring your <code>IDocumentStore</code>:</p>
-<pre><code class="language-csharp">&#xA;StoreOptions(_ =&gt;&#xA;{&#xA;    _.Storage.MappingFor(typeof(User)).DatabaseSchemaName = &quot;other&quot;;&#xA;    _.Storage.MappingFor(typeof(Issue)).DatabaseSchemaName = &quot;overriden&quot;;&#xA;    _.Storage.MappingFor(typeof(Company));&#xA;    _.Storage.MappingFor(typeof(IntDoc));&#xA;&#xA;    // this will tell marten to use the default &#x27;public&#x27; schema name.&#xA;    _.DatabaseSchemaName = Marten.StoreOptions.DefaultDatabaseSchemaName;&#xA;});&#xA;</code></pre>
+<pre><code class="language-csharp">&#xD;&#xA;StoreOptions(_ =&gt;&#xD;&#xA;{&#xD;&#xA;    _.Storage.MappingFor(typeof(User)).DatabaseSchemaName = &quot;other&quot;;&#xD;&#xA;    _.Storage.MappingFor(typeof(Issue)).DatabaseSchemaName = &quot;overriden&quot;;&#xD;&#xA;    _.Storage.MappingFor(typeof(Company));&#xD;&#xA;    _.Storage.MappingFor(typeof(IntDoc));&#xD;&#xA;&#xD;&#xA;    // this will tell marten to use the default &#x27;public&#x27; schema name.&#xD;&#xA;    _.DatabaseSchemaName = Marten.StoreOptions.DefaultDatabaseSchemaName;&#xD;&#xA;});&#xD;&#xA;</code></pre>
 <p>As you can see, you can also choose to configure the schema storage for each document type individually.</p>
 
 			      	</div>
